# ha_addon_webbox_modbus

./: .dockerignore  .gitignore  README.md  dev.ps1  repository.yaml
webbox_modbus/: CHANGELOG.md  Dockerfile  build.yaml  config.yaml  requirements.txt  run.sh
webbox_modbus/app/: __init__.py  crosswalk.py  live_registers.py  live_registers_sb.py  main.py  modbus_bundle.py  modbus_client.py  modbus_policy.py  panel_modbus.py  panel_writable.py  profile_loader.py  services.py
webbox_modbus/app/parameters/: __init__.py  catalog.py  sunny_island.py
webbox_modbus/app/static/: app.js  index.html  styles.css
webbox_modbus/app/webbox/: __init__.py  client.py  storage.py
webbox_modbus/profiles/: SI6048MBP.xml
webbox_modbus/translations/: en.yaml
webbox_panel/: DOCS.md  Dockerfile  config.yaml  pyproject.toml  run.sh
webbox_panel/webbox_panel/: app.py  core.py  registers.py  writable.py
